Problem mit rc-kerneln behoben bei der Anzeige von kver